--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "js-cookie": "^3.0.5",
-    "next": "13.5.6",
+    "next": "^14.0.1",
     "react": "^18",
     "react-dom": "^18"
   },
