--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
     "@types/js-cookie": "^3.0.5",
+    "@use-gesture/react": "^10.3.0",
     "axios": "^1.5.1",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "js-cookie": "^3.0.5",
+    "motion": "^10.16.4",
     "next": "^14.0.1",
     "react": "^18",
     "react-dom": "^18"
