--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-  "name": "next-project-front",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@nextui-org/react": "^2.1.13",
-    "@types/js-cookie": "^3.0.5",
-    "@use-gesture/react": "^10.3.0",
-    "axios": "^1.5.1",
-    "formik": "^2.4.5",
-    "framer-motion": "^10.16.4",
-    "js-cookie": "^3.0.5",
-    "motion": "^10.16.4",
-    "next": "^14.0.1",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "typescript": "^5"
-  }
+    "name": "next-project-front",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --turbo",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@nextui-org/react": "^2.2.9",
+        "@types/js-cookie": "^3.0.6",
+        "@use-gesture/react": "^10.3.0",
+        "axios": "^1.6.1",
+        "formik": "^2.4.5",
+        "framer-motion": "^10.16.4",
+        "js-cookie": "^3.0.5",
+        "motion": "^10.16.4",
+        "next": "^14.0.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+        "@types/node": "^20.9.0",
+        "@types/react": "^18.2.37",
+        "@types/react-dom": "^18.2.15",
+        "autoprefixer": "^10.4.16",
+        "eslint": "^8.53.0",
+        "eslint-config-next": "^13.5.6",
+        "eslint-config-prettier": "^9.0.0",
+        "postcss": "^8",
+        "tailwindcss": "^3.3.5",
+        "typescript": "^5.2.2"
+    }
 }
