--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@monaco-editor/react": "^4.6.0",
         "@nextui-org/react": "^2.2.9",
         "@types/js-cookie": "^3.0.6",
         "@use-gesture/react": "^10.3.0",
         "axios": "^1.6.1",
         "formik": "^2.4.5",
-        "framer-motion": "^10.16.4",
+        "framer-motion": "^10.16.5",
         "js-cookie": "^3.0.5",
         "motion": "^10.16.4",
         "next": "^14.0.2",
